layout issues fixed

--- a/mcidashboard/mcidashboard-front/src/css/questionnaire.css
+++ b/mcidashboard/mcidashboard-front/src/css/questionnaire.css
@@ -87,7 +87,7 @@
   
   .input-row {
     display: flex;
-    align-items: center;
+    justify-content: flex-end;
     width: 100%;
   }
   
